# aquarius-news

./: .gitignore  LICENSE.md  README.md  pyproject.toml  testing.py
.cache/69/: cache.db
aquarius/: creation.py  smtp.py
aquarius/schemas/: exceptions.py
aquarius/tools/: __init__.py  arxiv_fetch.py  reddit_fetch.py
examples/: genAI_llm_news_smtp.py
mas-newsletter/: creation.py  main.py
newsletter/: llm_news.yaml
tests/: test_smtp.py
tests/tools/: test_arvix.py  test_reddit.py
